# android-rust-experiments

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jetpackcomposehelloworld/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jetpackcomposehelloworld/: MainActivity.kt
app/src/main/java/com/example/jetpackcomposehelloworld/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jetpackcomposehelloworld/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
roast/: Cargo.toml
roast/scripts/: android_build.sh
roast/src/: lib.rs
