[package]
name = "roast"
version = "0.1.0"
authors = ["expectocode <expectocode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["rt", "time"] }
jni = "0.19.0"


[lib]
crate-type = ["cdylib"]
name = "roast"
