[package]
name = "roast"
version = "0.1.0"
authors = ["expectocode <expectocode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["rt", "time", "sync"] }
jni = "0.19.0"
grammers-client = { path = "/home/tanuj/code/grammers/lib/grammers-client" }
grammers-session = { path = "/home/tanuj/code/grammers/lib/grammers-session" }
log = "0.4.14"
once_cell = "1.6.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9"

[lib]
crate-type = ["cdylib"]
name = "roast"
